# Wattsmith

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml  quality.yml
assets/presentmon/: README.md
src/gpu_efficiency_finder/: __init__.py  __main__.py  app.py  config.py  constants.py  errors.py  logging_setup.py  models.py
src/gpu_efficiency_finder/adapters/: __init__.py  clock_proxy_source.py  compute_load_source.py  hwinfo_source.py  nvidia_smi_backend.py  nvml_backend.py  presentmon_source.py  process_benchmark_runner.py
src/gpu_efficiency_finder/domain/: __init__.py  analysis.py  sweep.py
src/gpu_efficiency_finder/infra/: __init__.py  persistence.py  presentmon_bundle.py
src/gpu_efficiency_finder/ports/: __init__.py  benchmark_runner.py  gpu_backend.py  perf_source.py  voltage_source.py
src/gpu_efficiency_finder/ui/: __init__.py  chart.py  config_panel.py  results_table.py
tests/adapters/: test_hwinfo_voltage.py  test_presentmon_parse.py
tests/domain/: test_analysis.py  test_sweep.py
