[project]
name = "gpu-efficiency-finder"
version = "0.2.6"
description = "Findet den Effizienz-Sweet-Spot einer NVIDIA-GPU per automatischem Power-Limit-Sweep."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GPU Efficiency Finder" }]
dependencies = [
    "nicegui>=2.0",
    # Kein pywebview/WebView2: die UI läuft im Standard-Browser (robuster, keine Runtime-Abhängigkeit).
    "nvidia-ml-py>=12.535",
    "kneed>=0.8",
    "plotly>=5.20",
    "psutil>=5.9",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# torch ist GB-groß und wird NICHT in die EXE gebündelt — nur für den Compute-Last-Modus.
compute = ["torch"]
# HWiNFO-Shared-Memory-Reader (optional, nur lesende Telemetrie).
hwinfo = []
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1", "pyinstaller>=6.0"]

[project.scripts]
gpu-efficiency-finder = "gpu_efficiency_finder.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_efficiency_finder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Deutsche Texte nutzen bewusst echte Typografie (z. B. „–" EN DASH, Umlaute).
# Die „ambiguous unicode"-Regeln würden das fälschlich anmahnen.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
# "standard" statt "strict": die UI-/GPU-Bibliotheken (NiceGUI, plotly, kneed, pynvml) sind
# untypisiert; strict erzeugt damit nur Rauschen ("Type … is unknown"). pyright ist ein
# optionaler lokaler Check und NICHT Teil der CI (Gates sind ruff + pytest).
typeCheckingMode = "standard"
reportMissingModuleSource = false
